# Catrans

./: .clang-tidy  .gitignore  CMAKELists.txt  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yaml
include/: catrans.h  config.h  core.h  helpers.h  ui.h
src/: catrans.c  core.c  helpers.c  main.c  ui.c
src/ui/: CMakeLists.txt  ui.c  ui_helpers.c  ui_input.c  ui_recap.c  ui_receipt.c
src/ui/include/: ui.h  ui_helpers.h  ui_input.h  ui_recap.h  ui_receipt.h
